fix IcoDetails layout issues

--- a/src/containers/icoDetails/IcoDetails.css
+++ b/src/containers/icoDetails/IcoDetails.css
@@ -45,5 +45,5 @@
 .gingr-left {
   position: absolute;
   bottom: -50px;
-  left: -234px;
+  left: -244px;
 }
